# pdf-signet

./: .env.example  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  tools.py
app/: LICENSE  dto.py  main.py  settings.py
