[project]
name = "pdf-signet"
version = "0.1.0"
description = ""
authors = [
    {name = "Borja",email = "borjabm.e@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pyhanko[image-support,opentype,pkcs11,xmp] (>=0.26.0,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
