[project]
name = "pdf-signet"
version = "0.1.0"
description = "PDF Signet is a FastAPI REST API to sign PDF documents"
authors = [
    {name = "Lareira Digital Developers",email = "developers@lareira.digital"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pyhanko[image-support,opentype,pkcs11,xmp] (>=0.26.0,<0.27.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
